--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "babel-eslint": "^7.2.3",
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
-    "jest": "^21.0.1"
+    "jest": "^21.0.1",
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
