state and store

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "global": "^4.3.2",
+    "lodash.debounce": "^4.0.8",
+    "lodash.pickby": "^4.6.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
