--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
     "jest": "^21.0.1",
+    "react-addons-perf": "^15.4.2",
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
